added navigational links, google calendar page

--- a/includes/header.htm
+++ b/includes/header.htm
@@ -10,6 +10,7 @@
   <title>Cardiff CompSoc</title>
 
   <!-- Link to Semantic UI CDN (for now) and custom CSS for overrides -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css"
    href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.css">
   <link rel="stylesheet" type="text/css" href="./css/main.css">
