--- a/includes/nav.htm
+++ b/includes/nav.htm
@@ -1,15 +1,15 @@
 <!-- Top Menu: Main navigation -->
-<div id="main-menu" class="ui secondary pointing menu">
+<div id="nav" class="ui secondary pointing menu">
   <a target="_blank" class="item" href="https://www.cs.cf.ac.uk">
     <img class="ui tiny image item" src="./img/cdf_logo.jpg">
   </a>
-  <a class="active item">
-    <img class="ui small image" src="./img/logo.png">
+  <a href="./" class="active item">
+    <img class="ui small image" src="../img/logo.png">
   </a>
   <div class="right menu">
-    <a class="item">Events</a>
-    <a class="item">Community</a>
-    <a class="item">Projects</a>
-    <a class="item">Contact</a>
+    <a href="./events.php" class="item">Events</a>
+    <a href="./community.php" class="item">Community</a>
+    <a href="./projects.php" class="item">Projects</a>
+    <a href="./contact.php" class="item">Contact</a>
   </div>
 </div>
