recreated logos in inkscape to be sharper - added favicon

--- a/includes/header.htm
+++ b/includes/header.htm
@@ -7,6 +7,9 @@
   <meta name="keywords" content="Cardiff,University,Code,Hackathon,Networking">
   <meta name="author" content="harritaylor.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon"
+      type="image/png"
+      href="./img/favicon.png">
   <title>Cardiff CompSoc</title>
 
   <!-- Link to Semantic UI CDN (for now) and custom CSS for overrides -->
