mobile menu working - fixed some scaling issues

--- a/includes/header.htm
+++ b/includes/header.htm
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon"
       type="image/png"
-      href="./img/favicon.png">
+      href="./img/min-logo.png">
   <title>Cardiff CompSoc</title>
 
   <!-- Link to Semantic UI CDN (for now) and custom CSS for overrides -->
@@ -19,3 +19,7 @@
   <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
+  <!-- jQuery and Semantic UI JS files - at the bottom for faster load -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.js"></script>
+<script src="./js/main.js"></script>
