--- a/includes/nav.htm
+++ b/includes/nav.htm
@@ -1,15 +1,38 @@
+<div class="ui right sidebar vertical logo inverted menu">
+  <a href="./index.php"    class="red item">Home</a>
+  <a href="./events.php"    class="red item">Events</a>
+  <a href="./community.php" class="red item">Community</a>
+  <a href="./contact.php"   class="red item">Contact</a>
+  <a href="./projects.php"  class="red item">Projects</a>
+  <br/>
+  <img class="ui right floated tiny image item" src="./img/cdf_logo.jpg">
+  <img class="ui small image item" src="./img/white-logo.png">
+</div>
+<div class="pusher">
+
+
+
 <!-- Top Menu: Main navigation -->
-<div id="nav" class="ui secondary pointing menu">
-  <a target="_blank" class="item" href="https://www.cs.cf.ac.uk">
-    <img class="ui tiny image item" src="./img/cdf_logo.jpg">
-  </a>
-  <a href="./" class="active item">
-    <img class="ui small image" src="../img/logo.png">
-  </a>
-  <div class="right menu">
-    <a href="./events.php" class="item">Events</a>
-    <a href="./community.php" class="item">Community</a>
-    <a href="./projects.php" class="item">Projects</a>
-    <a href="./contact.php" class="item">Contact</a>
+<div class="ui secondary menu">
+  <div class="ui container">
+
+    <a target="_blank" class="item" href="https://www.cs.cf.ac.uk">
+      <img class="ui tiny image item" src="./img/cdf_logo.jpg">
+    </a>
+    <a href="./" class="item">
+      <img class="ui small image" src="./img/logo.png">
+    </a>
+    <div class="right floated item">
+    <button class="ui toc item">
+        <i  class="sidebar icon"></i>
+    </button>
+  </div>
+    <div id="nav" class="right menu">
+      <a href="./events.php"    class="red item">Events</a>
+      <a href="./community.php" class="red item">Community</a>
+      <a href="./contact.php"   class="red item">Contact</a>
+      <a href="./projects.php"  class="red item">Projects</a>
+
+    </div>
   </div>
 </div>
