--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,38 @@
 }
 
 /* tag based */
-div {
+ #homepage div {
   padding: 50px 0px 0px 0px;
 }
 
 /* cardiff color:
   background-color: rgb(203, 15, 61);
 }*/
+
+
+html.ios {
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+html.ios,
+html.ios body {
+  height: initial !important;
+}
+
+.secondary.menu .toc.item {
+      display: none;
+    }
+
+
+@media only screen and (max-width: 700px) {
+      .ui.fixed.menu {
+        display: none !important;
+      }
+      /*.secondary.menu .item,*/
+      .secondary.menu #nav {
+        display: none;
+      }
+      .secondary.menu .toc.item {
+        display: block;
+      }
+    }
