added content to community page

--- a/includes/nav.htm
+++ b/includes/nav.htm
@@ -2,10 +2,12 @@
   <a href="./index.php"    class="red item">Home</a>
   <a href="./events.php"    class="red item">Events</a>
   <a href="./community.php" class="red item">Community</a>
-  <a href="./contact.php"   class="red item">Contact</a>
+  <!-- <a href="./contact.php"   class="red item">Contact</a> -->
   <a href="./projects.php"  class="red item">Projects</a>
   <br/>
-  <img class="ui right floated tiny image item" src="./img/cdf_logo.jpg">
+  <a target="_blank" href="https://www.cs.cf.ac.uk">
+    <img class="ui right floated tiny image item" src="./img/cdf_logo.jpg">
+  </a>
   <img class="ui small image item" src="./img/white-logo.png">
 </div>
 <div class="pusher">
@@ -16,7 +18,7 @@
 <div class="ui secondary menu">
   <div class="ui container">
 
-    <a target="_blank" class="item" href="https://www.cs.cf.ac.uk">
+    <a target="_blank" id="cdf-logo" class="cdf-logo item" href="https://www.cs.cf.ac.uk">
       <img class="ui tiny image item" src="./img/cdf_logo.jpg">
     </a>
     <a href="./" class="item">
@@ -30,7 +32,7 @@
     <div id="nav" class="right menu">
       <a href="./events.php"    class="red item">Events</a>
       <a href="./community.php" class="red item">Community</a>
-      <a href="./contact.php"   class="red item">Contact</a>
+      <!-- <a href="./contact.php"   class="red item">Contact</a> -->
       <a href="./projects.php"  class="red item">Projects</a>
 
     </div>
