--- a/css/main.css
+++ b/css/main.css
@@ -43,14 +43,13 @@ html.ios body {
 
 
 @media only screen and (max-width: 700px) {
-      .ui.fixed.menu {
-        display: none !important;
-      }
-      /*.secondary.menu .item,*/
       .secondary.menu #nav {
         display: none;
       }
       .secondary.menu .toc.item {
         display: block;
+      }
+      #cdf-logo {
+        display: none;
       }
     }
