added copy to community and events pages. removed projects from nav (for now). added basic CSS rules for p tags.

--- a/includes/nav.htm
+++ b/includes/nav.htm
@@ -3,7 +3,7 @@
   <a href="./events.php"    class="red item">Events</a>
   <a href="./community.php" class="red item">Community</a>
   <!-- <a href="./contact.php"   class="red item">Contact</a> -->
-  <a href="./projects.php"  class="red item">Projects</a>
+  <!-- <a href="./projects.php"  class="red item">Projects</a> -->
   <br/>
   <a target="_blank" href="https://www.cs.cf.ac.uk">
     <img class="ui right floated tiny image item" src="./img/cdf_logo.jpg">
@@ -33,7 +33,7 @@
       <a href="./events.php"    class="red item">Events</a>
       <a href="./community.php" class="red item">Community</a>
       <!-- <a href="./contact.php"   class="red item">Contact</a> -->
-      <a href="./projects.php"  class="red item">Projects</a>
+      <!-- <a href="./projects.php"  class="red item">Projects</a> -->
 
     </div>
   </div>
