--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@
   padding: 50px 0px 0px 0px;
 }
 
+p {
+  font-size: 16px;
+  line-height:1.1;
+}
+
 /* cardiff color:
   background-color: rgb(203, 15, 61);
 }*/
